[package]
name = "glow"
version = "0.1.0"
authors = ["Rob Young <rob@robyoung.digital>"]
edition = "2018"

[profile.release]
opt-level = 'z'

[dependencies]
embedded-hal = "0.2"
chrono = "0.4"
blinkt = "0.5"
am2320 = "0.1.1"
rppal = { version = "0.11.3", features = ["hal"] }
log = "0.4"
env_logger = "0.6"
ureq = { version = "0.11.3", features = ["json"] }
