[package]
name = "glow-device"
version = "0.1.0"
authors = ["Rob Young <rob@robyoung.digital>"]
edition = "2018"

[dependencies]
am2320 = "0.1.1"
blinkt = "0.5"
chrono = { version = "0.4", features = ["serde"] }
embedded-hal = "0.2"
env_logger = "0.6"
log = "0.4"
rppal = { version = "0.11.3", features = ["hal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tplinker = "0.2"
ureq = { version = "0.11.3", features = ["json"] }
glow_events = { path = "../glow_events" }
