[package]
name = "glow-device"
version = "0.1.0"
authors = ["Rob Young <rob@robyoung.digital>"]
edition = "2018"

[dependencies]
am2320 = "0.2.0"
blinkt = "0.5"
chrono = { version = "0.4", features = ["serde"] }
embedded-hal = "0.2"
rppal = { version = "0.11.3", features = ["hal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tplinker = "0.4.2"
glow_events = { path = "../glow_events" }

# logging
env_logger = "0.6"
log = "0.4"

# async
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
async-trait = "0.1.36"
reqwest = { version = "0.10.7", default-features = false, features = ["rustls-tls", "json"] }
