[package]
name = "glow-web"
version = "0.1.0"
authors = ["Rob Young <rob@robyoung.digital>"]
edition = "2018"

[dependencies]
actix = "0.9"
actix-web = "2.0"
actix-web-httpauth = "0.4.0"
actix-session = "0.3"
actix-service = "1.0"
actix-rt = "1.0"
futures = "0.3"

r2d2 = "0.8"
r2d2_sqlite = "0.14"
rusqlite = { version = "0.21", features = ["chrono"] }
fallible-iterator = "0.2"

chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.6"
serde_json = "1.0"
serde = "1.0"
base64 = "0.11"
rust-argon2 = "0.8"

tera = { version = "1", default-features = false }

glow_events = { path = "../glow_events" }
