[package]
name = "glow-web"
version = "0.1.0"
authors = ["Rob Young <rob@robyoung.digital>"]
edition = "2018"

[dependencies]
actix = "0.9"
actix-rt = "1.0"
actix-service = "1.0"
actix-session = "0.3"
actix-web = "2.0"
actix-web-httpauth = "0.4.0"
base64 = "0.11"
chrono = { version = "0.4", features = ["serde"] }
fallible-iterator = "0.2"
futures = "0.3"
itertools = "0.9"
r2d2 = "0.8"
r2d2_sqlite = "0.16"
rand = "0.7"
rusqlite = { version = "0.23", features = ["chrono"] }
rust-argon2 = "0.8"
serde = "1.0"
serde_json = "1.0"
tera = { version = "1", default-features = false }

env_logger = "0.6"
eyre = "0.5"
log = "0.4"

glow_events = { path = "../glow_events" }
